--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hpp": "^0.2.3",
     "html-to-text": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.0",
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
     "slugify": "^1.5.0",
