--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "hpp": "^0.2.3",
     "html-to-text": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^7.0.3",
     "mongodb": "^4.8.0",
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
+    "redis": "^4.2.0",
     "slugify": "^1.5.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
