--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "jwt-redis": "^7.0.3",
     "mongodb": "^4.8.0",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.5.0",
     "redis": "^4.2.0",
+    "sharp": "^0.30.7",
     "slugify": "^1.5.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
