--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.12.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.5.0",
+    "pug": "^3.0.2",
     "redis": "^4.2.0",
     "sharp": "^0.30.7",
     "slugify": "^1.5.0",
